# EspSmith

./: .editorconfig  .git-commit-msg.tmp  .gitee-ci.yml  .gitignore  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json  tauri-signer.key.pub  vite.config.ts
.github/workflows/: release.yml  rust-ci.yml
.mimocode/plans/: 1781248492020-playful-river.md
scripts/: generate-latest-json.js  run-tauri.mjs  sync-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  test_probe.rs  ui-theme.wixobj
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/scripts/: kconfig_dump.py  test_kconfig.py
src-tauri/src/: ai_assistant.rs  ai_provider.rs  cli_main.rs  confserver.rs  connection.rs  idf.rs  lib.rs  main.rs  mcp.rs  sdkconfig.rs  sdkconfig_loader.rs
src-tauri/src/adapters/: build.rs  flash.rs  gdb.rs  gdb_verify.rs  mod.rs  verify.rs
src-tauri/src/commands/: build.rs  debug.rs  filesystem.rs  gdb_session.rs  git_cmd.rs  hardware.rs  mod.rs  openocd.rs  project.rs  serial.rs
src-tauri/src/experience/: engine.rs  mod.rs  storage.rs
src-tauri/src/instruments/: doctor.rs  mod.rs
src-tauri/src/self_healing/: ipc.rs  mod.rs  recovery.rs  runner.rs  stages.rs  types.rs
src-tauri/wix/: LICENSE.rtf  en-US.wxl  generate-images.ps1  main.wxs  ui-theme.wxs  zh-CN.wxl
src/components/: NewProjectDialog.tsx  WelcomeScreen.tsx
src/hooks/: useBuildOutput.ts  useSerialMonitor.ts
src/i18n/: index.ts
(+61 files in other folders)
