[package]
name = "espsmith"
version = "0.1.5"
edition = "2021"
description = "AI-powered ESP32 development studio"
authors = ["EspSmith Team"]
license = "Apache-2.0"
repository = "https://github.com/fangkuaiLS/EspSmith"
rust-version = "1.77"
default-run = "espsmith"

[package.metadata]
tauri-winres = { FileDescription = "EspSmith - AI-powered ESP32 development studio", ProductName = "EspSmith" }

[lib]
name = "esp_smith_lib"
crate-type = ["staticlib", "rlib"]

# Console subsystem CLI wrapper — used by CodeWhale's exec_shell.
# GUI subsystem (espsmith.exe) can't output to pipes in PowerShell,
# so we provide this console-mode binary for CLI operations.
[[bin]]
name = "espsmith-cli"
path = "src/cli_main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
regex = "1"
shellexpand = "3"
lazy_static = "1"

serialport = "4"
dirs-next = "2"
opener = "0.7"
which = "7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
